src/objects/License_Agent__c.object
<CustomObject>
    <description>License Agent which will have:
Agent Type as Java/.Net/PHP
and Agent count</description>
    <fields>
        <fullName>Agent_Type__c</fullName>
        <label>Agent Type</label>
        <picklist>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NodeJs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Machine</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Category of Agent not exposed in UI but used to show different sections of agents in License UI</description>
        <inlineHelpText>Category of Agent not exposed in UI but used to show different sections of agents in License UI</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>APM Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Edition__c</fullName>
        <description>Product Edition</description>
        <inlineHelpText>Product Edition</inlineHelpText>
        <label>Edition</label>
        <picklist>
            <picklistValues>
                <fullName>PRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pro Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LITE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Custom field to track if the product is already enabled for this account or not?</description>
        <inlineHelpText>Custom field to track if the product is already enabled for this account or not?</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>License Agents</relationshipLabel>
        <relationshipName>License_Agents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Licensing_Model__c</fullName>
        <label>Licensing Model</label>
        <picklist>
            <picklistValues>
                <fullName>FIXED</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VARIABLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Agents__c</fullName>
        <label>Max Agents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retention_Period__c</fullName>
        <description>Data Retention applies only to Analytics metrics (Transaction and Log). For all of the APM this field will have a null value</description>
        <inlineHelpText>Data Retention applies only to Analytics metrics (Transaction and Log). For all of the APM this field will have a null value</inlineHelpText>
        <label>Retention Period</label>
        <picklist>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>License Agent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Search_By_License_ID</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Agent_Type__c</columns>
        <columns>Count__c</columns>
        <columns>License__c</columns>
        <columns>Licensing_Model__c</columns>
        <columns>Retention_Period__c</columns>
        <columns>Max_Agents__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Enabled__c</columns>
        <columns>Edition__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>License__c</field>
            <operation>startsWith</operation>
            <value>a0Q80000009DPVU</value>
        </filters>
        <label>Search By License ID</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>License Units Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License Agents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>